<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="baseViewModel"
            type="com.qihe.imagecompression.viewmodel.FeaturesViewModel"/>
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/more_feture_shape"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_7"
        >

        <LinearLayout
            android:id="@+id/diss_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:gravity="center">

            <View
                android:layout_width="@dimen/dp_33"
                android:layout_height="@dimen/dp_5"
                android:background="@drawable/open_shape" />
        </LinearLayout>


        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.renameClick}"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rename_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/rename"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.openClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/open_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/open_style"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>


        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.shareClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/rename_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/share"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.jianjilick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/jianji" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/jianji"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>


        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.setRingClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ring_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/set_ling"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.filePathClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/file_path_ic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/file_path"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:background="?android:attr/selectableItemBackground"
            binding:onClickCommand="@{baseViewModel.deleteClick}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_15">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/delete_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/deletc_iv"
                android:textColor="@color/color_FF3333"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>


    </LinearLayout>

</layout>