<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/more_feture_shape"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10">

        <View
            android:id="@+id/diss_view"
            android:layout_width="@dimen/dp_33"
            android:layout_height="@dimen/dp_5"
            android:background="@drawable/open_shape" />
    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="尺寸调整_21210103"
        android:textColor="#ff2f3238"
        android:textSize="16sp"
        />



    <LinearLayout
        android:id="@+id/rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/rename_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/rename"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_icon3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/share"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/deletc_iv"
            android:textColor="@color/color_FF3333"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>


</LinearLayout>
