<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:binding="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="baseViewModel"
            type="com.qihe.imagecompression.viewmodel.FeaturesViewModel"/>
    </data>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.dueeeke.videoplayer.player.IjkVideoView
                android:id="@+id/player"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_256" />


            <ImageView
                android:background="?android:attr/actionBarItemBackground"
                binding:onClickCommand="@{baseViewModel.backClick}"
                android:layout_marginTop="@dimen/dp_25"
                android:padding="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_icon_white"/>

        </RelativeLayout>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    binding:onClickCommand="@{baseViewModel.choseFormatClick}"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_15">
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/format"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/color_000000"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:textColor="@color/color_7F7F7F"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:text="@{baseViewModel.formatString}"/>

                    <ImageView
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/go_icon"/>
                </LinearLayout>

                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    binding:onClickCommand="@{baseViewModel.samplingRateClick}"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15">
                    <TextView
                        android:textStyle="bold"
                        android:text="@string/sampling_rate"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/color_000000"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:textColor="@color/color_7F7F7F"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:text="@{baseViewModel.samplingRateString+@string/hz}"/>

                    <ImageView
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/go_icon"/>
                </LinearLayout>


                <LinearLayout
                    android:background="?android:attr/selectableItemBackground"
                    binding:onClickCommand="@{baseViewModel.bitRateClick}"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_15">




                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/bit_rate"
                        android:textColor="@color/color_000000"
                        android:textSize="@dimen/sp_14"
                        android:textStyle="bold" />

                    <TextView
                        android:textColor="@color/color_7F7F7F"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/sp_14"
                        android:text="@{baseViewModel.bitRateString+@string/kbps}"/>

                    <ImageView
                        android:layout_marginLeft="@dimen/dp_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/go_icon"/>
                </LinearLayout>


                <!--<LinearLayout-->
                    <!--android:background="?android:attr/selectableItemBackground"-->
                    <!--binding:onClickCommand="@{baseViewModel.fadeInClick}"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="@dimen/dp_15">-->
                    <!--<TextView-->
                        <!--android:text="@string/fade_in"-->
                        <!--android:textSize="@dimen/sp_14"-->
                        <!--android:textColor="@color/color_000000"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_height="wrap_content" />-->


                    <!--<TextView-->
                        <!--android:textColor="@color/color_7F7F7F"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textSize="@dimen/sp_14"-->
                        <!--android:text="@{baseViewModel.fadeInString}"/>-->

                    <!--<ImageView-->
                        <!--android:layout_marginLeft="@dimen/dp_5"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/go_icon"/>-->
                <!--</LinearLayout>-->

                <!--<LinearLayout-->
                    <!--android:background="?android:attr/selectableItemBackground"-->
                    <!--binding:onClickCommand="@{baseViewModel.fadeOutClick}"-->
                    <!--android:gravity="center_vertical"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="@dimen/dp_15">-->
                    <!--<TextView-->
                        <!--android:text="@string/fade_out"-->
                        <!--android:textSize="@dimen/sp_14"-->
                        <!--android:textColor="@color/color_000000"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_weight="1"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_height="wrap_content" />-->


                    <!--<TextView-->
                        <!--android:textColor="@color/color_7F7F7F"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textSize="@dimen/sp_14"-->
                        <!--android:text="@{baseViewModel.fadeOutString}"/>-->

                    <!--<ImageView-->
                        <!--android:layout_marginLeft="@dimen/dp_5"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:src="@drawable/go_icon"/>-->
                <!--</LinearLayout>-->

            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:id="@+id/banner_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>


        <TextView
            binding:onClickCommand="@{baseViewModel.startClick}"
            android:background="@drawable/start_touying"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:text="@string/start_conversion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_55"
            android:gravity="center"/>

    </LinearLayout>
</layout>